force-app/main/default/objects/Order_Soojung__c/Order_Soojung__c.object-meta.xml
<CustomObject>
    <label>Order_Soojung</label>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order_Soojung</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>