force-app/main/default/objects/Order_Soojung__c/fields/Contact_Soojung__c.field-meta.xml
<CustomField>
    <fullName>Contact_Soojung__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact_Soojung__c</referenceTo>
    <relationshipLabel>Order_Soojung</relationshipLabel>
    <relationshipName>Order_Soojung</relationshipName>
    <type>Lookup</type>
</CustomField>