force-app/main/default/objects/Order_Soojung__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <label>Order Date</label>
    <type>DateTime</type>
</CustomField>