force-app/main/default/objects/Order_Soojung__c/fields/Ship_Mode__c.field-meta.xml
<CustomField>
    <fullName>Ship_Mode__c</fullName>
    <label>Ship Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Class</fullName>
            </value>
            <value>
                <fullName>Second Class</fullName>
            </value>
            <value>
                <fullName>Standard Class</fullName>
            </value>
            <value>
                <fullName>Same Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>