force-app/main/default/objects/Order_Soojung__c/fields/Total_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_Profit__c</fullName>
    <label>Total Profit</label>
    <summarizedField>OrderProduct_Soojung__c.Profit__c</summarizedField>
    <summaryForeignKey>OrderProduct_Soojung__c.Order_Soojung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>