force-app/main/default/objects/Order_Soojung__c/fields/Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales__c</fullName>
    <label>Total Sales</label>
    <summarizedField>OrderProduct_Soojung__c.Sales__c</summarizedField>
    <summaryForeignKey>OrderProduct_Soojung__c.Order_Soojung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>